--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -51,7 +51,7 @@
                     <div class="ContainerIndent">
                         <p:commandButton id="allocSliderResetButton" value="Recommended"
                                          styleClass="uob_button"
-                                         update=":ceForm:graphArea"
+                                         update=":ceForm:allocSlider, :ceForm:allocValue, :ceForm:graphArea"
                                          actionListener="#{uobpb.doAllocReset}">
                         </p:commandButton>
                     </div>
