Checked in uob files - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -13,12 +13,12 @@
                 </p:effect>
             </p:commandButton>
         </div>
-        <p:panel id="abc" styleClass="fineTuneBlock" style="display: none;">
+        <p:panel id="fineTuneBtnSlide" styleClass="fineTuneBlock" style="display: none;">
             <div class="Container100 FTLabel">
                 <span class="Fs30">Fine Tune Strategy</span>
                 <div class="Wid10 Fright">
                     <p:commandButton type="button" styleClass="fineTuneBtn" icon="fa fa-times">
-                        <p:effect type="slide" event="click" for="abc">
+                        <p:effect type="slide" event="click" for="fineTuneBtnSlide">
                             <f:param name="mode" value="'hide'" />
                         </p:effect>
                     </p:commandButton>
