Checked in uob files - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -8,7 +8,7 @@
     <div class="Wid30 Fleft LeftPanel">
         <div class="finetuneBtnBlock Fright">
             <p:commandButton type="button" styleClass="fineTuneBtn fineTuneBtnImg" icon="ui-icon-image">
-                <p:effect type="slide" event="click" for="abc">
+                <p:effect type="slide" event="click" for="fineTuneBtnSlide">
                     <f:param name="mode" value="'show'" />
                 </p:effect>
             </p:commandButton>
