Checked in files (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -33,7 +33,7 @@
             <div class="EmptyBox20"></div>
             <div class="Container100 DispBlock gray">
 
-                <div class="Container25 TexAlRight Fs14 uobSliderLabel">
+                <div class="Container25 TexAlRight Fs14 uobSliderLabel firstLabel">
                     Conservative</div>
                 <div class="Container50 TexAlCenter Fs20">
                     <h:inputHidden id="allocValue" value="#{uobpb.allocationIndex}" />
@@ -44,7 +44,7 @@
                                 listener="#{uobpb.onAllocSlider}" />
                     </p:slider>
                 </div>
-                <div class="Container25 TexAlLeft Fs14 uobSliderLabel">
+                <div class="Container25 TexAlLeft Fs14 uobSliderLabel lastLabel">
                     Aggressive</div>
                 <div class="EmptyBox5"></div>
                 <div class="Container100 TexAlCenter">
